--- a/TestDataGenerator.csproj
+++ b/TestDataGenerator.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="EPPlus" Version="7.5.3" />
   </ItemGroup>
 
 </Project>
